--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy>=1.18.5
+numpy>=1.19.2
 scipy>=1.5.2
 tensorflow==2.4.1
 tensorflow-addons>=0.12.1
 zernike==0.0.31
-matpolotlib>=3.3.2
+matplotlib>=3.3.2
 opencv-python>=4.5.1.48
-pillow>=8.2.0
+pillow>=8.1.0
 galsim>=2.3.1
