--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ matplotlib>=3.3.2
 opencv-python>=4.5.1.48
 pillow>=8.1.0
 galsim>=2.3.1
-absl-py>=0.11.0
-
+opencv-python>=4.5.1.48
+astropy>=4.1
+seaborn>=0.11
