Changed naming of config section header

--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,simpleExample
+keys=root,simpleLogger
 
 [handlers]
 keys=consoleHandler
@@ -11,10 +11,10 @@ keys=simpleFormatter
 level=DEBUG
 handlers=consoleHandler
 
-[logger_simpleExample]
+[logger_simpleLogger]
 level=DEBUG
 handlers=consoleHandler
-qualname=simpleExample
+qualname=simpleLogger
 propagate=0
 
 [handler_consoleHandler]
