--- a/config/logging.conf
+++ b/config/logging.conf
@@ -1,19 +1,19 @@
 [loggers]
-keys=root,simpleLogger
+keys=root, simpleLogger
 
 [handlers]
-keys=consoleHandler
+keys=consoleHandler, fileHandler
 
 [formatters]
 keys=simpleFormatter
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler, fileHandler
 
 [logger_simpleLogger]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler, fileHandler
 qualname=simpleLogger
 propagate=0
 
@@ -22,6 +22,12 @@ class=StreamHandler
 level=DEBUG
 formatter=simpleFormatter
 args=(sys.stdout,)
+
+[handler_fileHandler]
+class=FileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('%(filename)s', 'w')
 
 [formatter_simpleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
