Provided instructions for env vars

--- a/config/configs.yaml
+++ b/config/configs.yaml
@@ -1,6 +1,8 @@
---- #DO NOT DELETE; PROVIDE PATH TO WORKDIR (I.E. LOCATION OF WF-PSF REPO)
+--- #DO NOT DELETE
   env_vars:
+    # Provide path to store wf-psf outputs
     workdir: /Users/jenniferpollack/Projects
+    # Provide path to wf-psf repo
     repodir: wf-psf
 ---
   training_conf: config/training_config.yaml
