--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -1,90 +1,134 @@
 training:
-  model: mccd
-  n_bins_lda: 8 
-  #Num of wavelength bins to reconstruct polychromatic objects.
-  output_q: 3  
-  #Downsampling rate to match the oversampled model to the specified telescope's sampling.
-  oversampling_rate: 3 
-  #Oversampling rate used for the OPD/WFE PSF model.
-  output_dim: 32   
-  #Dimension of the pixel PSF postage stamp
-  d_max: 2  
-  #Max polynomial degree of the parametric part.  chg to max_deg_param
-  d_max_nonparam: 5   
-  #Max polynomial degree of the non-parametric part. chg to max_deg_nonparam
+  model_params:
+    # Model type. Options are: 'mccd', 'graph', 'poly, 'param', 'poly_physical'."
+    model_name: poly
+
+    #Num of wavelength bins to reconstruct polychromatic objects.
+    n_bins_lda: 8 
+
+    #Downsampling rate to match the oversampled model to the specified telescope's sampling.
+    output_q: 3
+  
+    #Oversampling rate used for the OPD/WFE PSF model.
+    oversampling_rate: 3 
+  
+    #Dimension of the pixel PSF postage stamp
+    output_dim: 32
+      
+    # Parameters for parametric model  
+    param_params:
+      #Zernike polynomial modes to use on the parametric part.
+      n_zernikes: 15
+      #Max polynomial degree of the parametric part.  chg to max_deg_param
+      d_max: 2  
+      #Dimension of the OPD/Wavefront space."
+      pupil_diameter: 256
+      #Boolean to define if we use sample weights based on the noise standard deviation estimation
+      use_sample_weights: True 
+      #Interpolation type for the physical poly model. Options are: 'none', 'all', 'top_K', 'independent_Zk'."
+      interpolation_type: None
+      #Limits of the PSF field coordinates for the x axis.
+      x_lims: [0, 1e3]
+      #Limits of the PSF field coordinates for the y axis.
+      y_lims: [0, 1e3]
+    # Hyperparameters for Parametric model 
+    param_hparams:
+      # Parameter for the l2 loss function for the Optical path differences (OPD)/WFE
+      l2_param: 0.
  
-  data_driven:
-    num_graph_features: 10
-    hparams:
+    # Parameters for non-parametric model
+    nonparam_params:
+      #Max polynomial degree of the non-parametric part. chg to max_deg_nonparam
+      d_max_nonparam: 5 
+      num_graph_features: 10
+    # Hyperparameters for non-parameter model
+    nonparam_hparams:
+      #L1 regularisation parameter for the non-parametric part."
       l1_rate: 1e-8
 
-  hparams:
+  # Training hyperparameters
+  training_hparams:
     n_epochs_non_param:
       - 2 
       - 2
     n_epochs_param:
       - 2 
       - 2
-    multicycles:
-      total_cycles: 2
-      saved_cycle: cycle2
-    eval_batch_size: 16
-    l2_param: 0.
     batch_size: 32
 
-  base_id_name: _2_cycles_256
-  suffix_id_name: proj_d2_45z
-  id_name: '-coherent_euclid_200stars'
-  zernikes:
-    n_zernikes: 15
-    pupil_diameter: 256
-  psf_field_coords:
-    x_lims: 
-      - 0
-      - 1e3
-    y_lims:
-      - 0
-      - 1e3
-  training_data:
-    star_numbers: 1
-    dataset_folder:  wf-psf/data/coherent_euclid_dataset/
-    train_dataset_file: train_Euclid_res_200_TrainStars_id_001.npy
-  
-  test_data:
-    test_dataset_file: test_Euclid_res_id_001.npy
-
-# Training parameters
-# multicycle parameters
-  mcycle_params:
-    # Learning rates for the parametric parts. It should be a str where numeric values are separated by spaces.
-    l_rate_param_multi_cycle:
-        - 1e-2
-        - 1e-2
-    # Learning rates for the non-parametric parts. It should be a str where numeric values are separated by spaces."
-    l_rate_non_param_multi_cycle:
-        - 1e-1 
-        - 1e-1
-        
-    # Number of training epochs of the parametric parts. It should be a strign where numeric values are separated by spaces."
-    n_epochs_param_multi_cycle:
-        - 20 
-        - 20
-  
-    # Number of training epochs of the non-parametric parts. It should be a str where numeric values are separated by spaces."
-    n_epochs_non_param_multi_cycle:
-        - 100 
-        - 120
-
-    # Make checkpoint at every cycle or just save the checkpoint at the end of the training."
-    save_all_cycles: False
-        
-    # Total amount of cycles to perform. For the moment the only available options are '1' or '2'."
-    total_cycles: 2
-        
-    # Train cycle definition. It can be: 'parametric', 'non-parametric', 'complete', 'only-non-parametric' and 'only-parametric'."
-    cycle_def: complete
-     
-
-
+    multicycle_params:
+      total_cycles: 2
+      #"Saved cycle to use for the evaluation. Can be 'cycle1' or 'cycle2'."
+      saved_cycle: cycle2
+   
+      # Learning rates for the parametric parts. It should be a str where numeric values are separated by spaces.
+      l_rate_param_multi_cycle:
+        1e-2
+        1e-2
+ 
+      # Learning rates for the non-parametric parts. It should be a str where numeric values are separated by spaces." 
+      l_rate_non_param_multi_cycle:
+        1e-1 
+        1e-1
+ 
+      # Number of training epochs of the parametric parts. It should be a strign where numeric values are separated by spaces."
+      n_epochs_param_multi_cycle:
+        20 
+        20
+ 
+      # Number of training epochs of the non-parametric parts. It should be a str where numeric values are separated by spaces."
+      n_epochs_non_param_multi_cycle:
+        100 
+        120
+ 
+      # Make checkpoint at every cycle or just save the checkpoint at the end of the training."
+      save_all_cycles: False
+ 
+      # Total amount of cycles to perform. For the moment the only available options are '1' or '2'."   
+      total_cycles: 2       
+ 
+       # Train cycle definition. It can be: 'parametric', 'non-parametric', 'complete', 'only-non-parametric' and 'only-parametric'."
+      cycle_def: complete
+         
+  data:
+    training:
+      file: data/coherent_euclid_dataset/train_Euclid_res_200_TrainStars_id_001.npy
+     # if training dataset file does not exist, generate a new one 
+      stars: null
+      positions: null
+      SEDS: null
+      zernike_coef: null
+      C_poly: null
+      params: # 
+        d_max: 2
+        max_order: 45
+        x_lims: [0, 1000.0]
+        y_lims: [0, 1000.0]
+        grid_points: [4, 4]
+        n_bins: 20
+        max_wfe_rms: 0.1
+        oversampling_rate: 3.0
+        output_Q: 3.0
+        output_dim: 32
+        LP_filter_length: 2
+        pupil_diameter: 256
+        euclid_obsc: true
+        n_stars: 200
+    test:
+      file: test_Euclid_res_id_001.npy
+      # If test dataset file not provided produce a new one
+      stars: null
+      noisy_stars: null
+      positions: null
+      SEDS: null
+      zernike_coef: null
+      C_poly: null
+      parameters:
+        d_max: 2
+        max_order: 45
+        x_lims: [0, 1000.0]
+        y_lims: [0, 1000.0]
+        grid_points: [4,4]
+        max_wfe_rms: 0.1
 
 
