Added env var for data dir

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+REPODIR=/path/to/wf-psf/repo
+DATADIR=${REPODIR}/data/coherent_euclid_dataset
 WORKDIR=/path/to/output/dir
-REPODIR=${WORKDIR}/wf-psf
