Changed structure after expert feedback

--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -15,34 +15,40 @@ training:
     #Dimension of the pixel PSF postage stamp
     output_dim: 32
       
-    # Parameters for parametric model  
-    param_params:
-      #Zernike polynomial modes to use on the parametric part.
-      n_zernikes: 15
-      #Max polynomial degree of the parametric part.  chg to max_deg_param
-      d_max: 2  
-      #Dimension of the OPD/Wavefront space."
-      pupil_diameter: 256
-      #Boolean to define if we use sample weights based on the noise standard deviation estimation
-      use_sample_weights: True 
-      #Interpolation type for the physical poly model. Options are: 'none', 'all', 'top_K', 'independent_Zk'."
-      interpolation_type: None
-      #Limits of the PSF field coordinates for the x axis.
-      x_lims: [0, 1e3]
-      #Limits of the PSF field coordinates for the y axis.
-      y_lims: [0, 1e3]
+    #Dimension of the OPD/Wavefront space."
+    pupil_diameter: 256
+
+    #Boolean to define if we use sample weights based on the noise standard deviation estimation
+    use_sample_weights: True 
+
+    #Interpolation type for the physical poly model. Options are: 'none', 'all', 'top_K', 'independent_Zk'."
+    interpolation_type: None
+
+    #Limits of the PSF field coordinates for the x axis.
+    x_lims: [0, 1e3]
+    
+    #Limits of the PSF field coordinates for the y axis.
+    y_lims: [0, 1e3]
+    
     # Hyperparameters for Parametric model 
     param_hparams:
       # Parameter for the l2 loss function for the Optical path differences (OPD)/WFE
       l2_param: 0.
+    
+      #Zernike polynomial modes to use on the parametric part.
+      n_zernikes: 15
+    
+      #Max polynomial degree of the parametric part.  chg to max_deg_param
+      d_max: 2  
  
-    # Parameters for non-parametric model
-    nonparam_params:
+    # Hyperparameters for non-parametric model
+    nonparam_hparams:
       #Max polynomial degree of the non-parametric part. chg to max_deg_nonparam
       d_max_nonparam: 5 
+
+      # Number of graph features
       num_graph_features: 10
-    # Hyperparameters for non-parameter model
-    nonparam_hparams:
+      
       #L1 regularisation parameter for the non-parametric part."
       l1_rate: 1e-8
 
