--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -86,7 +86,7 @@ training:
          
     multi_cycle_params:
      
-      # Total amount of cycles to perform. For the moment the only available options are '1' or '2'."   
+      # Total amount of cycles to perform.  
       total_cycles: 3   
          
       # Train cycle definition. It can be: 'parametric', 'non-parametric', 'complete', 'only-non-parametric' and 'only-parametric'."
