--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -24,11 +24,11 @@ training:
     #Interpolation type for the physical poly model. Options are: 'none', 'all', 'top_K', 'independent_Zk'."
     interpolation_type: None
 
-    # Intepolation points per bin
-    interp_pts_per_bin: 0
+    # SED intepolation points per bin
+    sed_interp_pts_per_bin: 0
 
-    # Extrapolate
-    extrapolate: True
+    # SED extrapolate 
+    sed_extrapolate: True
     
     # SED interpolate kind
     sed_interp_kind: linear
@@ -78,16 +78,16 @@ training:
 
   # Training hyperparameters
   training_hparams:
-    n_epochs_params: [2, 2, 2]
+    n_epochs_params: [2, 2]
    
-    n_epochs_non_params: [2, 2, 2] 
+    n_epochs_non_params: [2, 2] 
   
     batch_size: 32
          
     multi_cycle_params:
      
       # Total amount of cycles to perform.  
-      total_cycles: 3   
+      total_cycles: 2
          
       # Train cycle definition. It can be: 'parametric', 'non-parametric', 'complete', 'only-non-parametric' and 'only-parametric'."
       cycle_def: complete
@@ -96,19 +96,19 @@ training:
       save_all_cycles: False
 
       #"Saved cycle to use for the evaluation. Can be 'cycle1', 'cycle2', ..."
-      saved_cycle: cycle3
+      saved_cycle: cycle2
    
       # Learning rates for the parametric parts. It should be a str where numeric values are separated by spaces.
-      learning_rate_params: [1.0e-2, 1.0e-2, 1.0e-2]
+      learning_rate_params: [1.0e-2, 1.0e-2]
  
       # Learning rates for the non-parametric parts. It should be a str where numeric values are separated by spaces." 
-      learning_rate_non_params: [1.0e-1, 1.0e-1, 1.0e-1]
+      learning_rate_non_params: [1.0e-1, 1.0e-1]
  
       # Number of training epochs of the parametric parts. It should be a strign where numeric values are separated by spaces."
-      n_epochs_params: [20, 20, 20] 
+      n_epochs_params: [20, 20] 
   
       # Number of training epochs of the non-parametric parts. It should be a str where numeric values are separated by spaces."
-      n_epochs_non_params: [100, 120, 120]
+      n_epochs_non_params: [100, 120]
   
 
   # Training and test datasets
