Modified to allow absolute paths for config files and input data

--- a/config/configs.yaml
+++ b/config/configs.yaml
@@ -1,4 +1,4 @@
 ---
-  data_conf: config/data_config.yaml
-  training_conf: config/training_config.yaml
-  metrics_conf: config/metrics_config.yaml
+  data_conf: data_config.yaml
+  training_conf: training_config.yaml
+  metrics_conf: metrics_config.yaml
