--- a/config/data_config.yaml
+++ b/config/data_config.yaml
@@ -1,7 +1,9 @@
 # Training and test datasets for training and/or metrics evaluation
 data:
   training:
-    file: data/coherent_euclid_dataset/train_Euclid_res_200_TrainStars_id_001.npy
+    # Specify directory path to data; Default setting is /path/to/repo/data
+    data_dir: data
+    file: coherent_euclid_dataset/train_Euclid_res_200_TrainStars_id_001.npy
     # if training dataset file does not exist, generate a new one by setting values below
     stars: null
     positions: null
@@ -23,19 +25,20 @@ data:
       pupil_diameter: 256
       euclid_obsc: true
       n_stars: 200
-    test:
-      file: data/coherent_euclid_dataset/test_Euclid_res_id_001.npy
-      # If test dataset file not provided produce a new one
-      stars: null
-      noisy_stars: null
-      positions: null
-      SEDS: null
-      zernike_coef: null
-      C_poly: null
-      parameters:
-        d_max: 2
-        max_order: 45
-        x_lims: [0, 1000.0]
-        y_lims: [0, 1000.0]
-        grid_points: [4,4]
-        max_wfe_rms: 0.1
+  test:
+    data_dir: data
+    file: coherent_euclid_dataset/test_Euclid_res_id_001.npy
+    # If test dataset file not provided produce a new one
+    stars: null
+    noisy_stars: null
+    positions: null
+    SEDS: null
+    zernike_coef: null
+    C_poly: null
+    parameters:
+      d_max: 2
+      max_order: 45
+      x_lims: [0, 1000.0]
+      y_lims: [0, 1000.0]
+      grid_points: [4,4]
+      max_wfe_rms: 0.1
