--- a/config/plotting_config.yaml
+++ b/config/plotting_config.yaml
@@ -9,3 +9,5 @@ plotting_params:
   metrics_config: metrics_config.yaml
   # Plot parameter. Training star number of the different models evaluated.
   star_numbers: 200
+  # Flag to show plot
+  plot_show: False
