Added plotting_config param

--- a/config/metrics_config.yaml
+++ b/config/metrics_config.yaml
@@ -6,12 +6,14 @@ metrics:
   # Provide path to saved model checkpoints.
   chkp_save_path: checkpoint
   # Fill model_params if computing metrics_only on a pre-trained model
-  # ID name
+  # ID name  <-- this should be retrieved from the trained model training_config.yaml file
   id_name: -coherent_euclid_200stars
   # Path to Trained Model
-  trained_model_path: /Users/jenniferpollack/Projects/wf-outputs/wf-outputs-202306011821/
+  trained_model_path: /Users/jenniferpollack/Projects/jp272790/wf-outputs-202305272046/
   # Name of Trained Model Config file
   trained_model_config: config/training_config.yaml 
+  # Name of Plotting Config file - Enter file to run plot metrics else if empty run metrics evaluation only
+  plotting_config: plotting_config.yaml
   #Evaluate the monchromatic RMSE metric.
   eval_mono_metric_rmse: True
   #Evaluate the OPD RMSE metric.
