--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy>=1.19.2
 scipy>=1.5.2
-tensorflow>=2.4.1
+tensorflow>=2.4.1, <2.13.0
 tensorflow-addons>=0.12.1
 zernike==0.0.31
 opencv-python>=4.5.1.48
@@ -9,3 +9,5 @@ galsim>=2.3.1
 astropy>=4.1
 matplotlib>=3.3.2
 seaborn>=0.11
+
+
