--- a/config/metrics_config.yaml
+++ b/config/metrics_config.yaml
@@ -9,7 +9,7 @@ metrics:
   # ID name
   id_name: -coherent_euclid_200stars
   # Path to Trained Model
-  trained_model_path: /Users/jenniferpollack/Projects/wf-outputs/wf-outputs-202305262344/
+  trained_model_path: /Users/jw274171/rho-stats/Euclid/jwsfork/wf-psf
   # Name of Trained Model Config file
   trained_model_config: config/training_config.yaml
   #Evaluate the polychromatic RMSE metric.
@@ -22,6 +22,8 @@ metrics:
   eval_opd_metric_rmse: False
   # Save the predicted PSF images.
   save_psf_images: True
+  # super resolution or not ?
+  save_psf_super_res: False
   #Evaluate the super-resolution and the shape RMSE metrics for the train dataset.
   eval_train_shape_sr_metric_rmse: False
 
