--- a/config/configs.yaml
+++ b/config/configs.yaml
@@ -1,4 +1,4 @@
 ---
   data_conf: data_config.yaml
-  training_conf: training_config.yaml
+  training_conf: Null #training_config.yaml
   metrics_conf: metrics_config.yaml
