--- a/config/training_config.yaml
+++ b/config/training_config.yaml
@@ -1,12 +1,17 @@
 training:
   # ID name
-  id_name: -coherent_euclid_200stars
+  id_name: _sample_w_bis1_2k
+  # id_name: -coherent_euclid_2000stars
+  # Name of Data Config file
+  data_config: data_config.yaml 
+  # Metrics Config file - Enter file to run metrics evaluation else if empty run train only
+  metrics_config: metrics_config.yaml
   model_params:
     # Model type. Options are: 'mccd', 'graph', 'poly, 'param', 'poly_physical'."
     model_name: poly
 
     #Num of wavelength bins to reconstruct polychromatic objects.
-    n_bins_lda: 8 
+    n_bins_lda: 20 
 
     #Downsampling rate to match the oversampled model to the specified telescope's sampling.
     output_Q: 3
@@ -80,16 +85,16 @@ training:
 
   # Training hyperparameters
   training_hparams:
-    n_epochs_params: [2, 2]
+    n_epochs_params: [15, 15] 
    
-    n_epochs_non_params: [2, 2] 
+    n_epochs_non_params: [100, 50] 
   
     batch_size: 32
          
     multi_cycle_params:
      
       # Total amount of cycles to perform.  
-      total_cycles: 1
+      total_cycles: 2
          
       # Train cycle definition. It can be: 'parametric', 'non-parametric', 'complete', 'only-non-parametric' and 'only-parametric'."
       cycle_def: complete
@@ -98,17 +103,17 @@ training:
       save_all_cycles: False
 
       #"Saved cycle to use for the evaluation. Can be 'cycle1', 'cycle2', ..."
-      saved_cycle: cycle1
+      saved_cycle: cycle2
    
       # Learning rates for the parametric parts. It should be a str where numeric values are separated by spaces.
-      learning_rate_params: [1.0e-2, 1.0e-2]
+      learning_rate_params: [1.e-2, 4.e-3]
  
       # Learning rates for the non-parametric parts. It should be a str where numeric values are separated by spaces." 
-      learning_rate_non_params: [1.0e-1, 1.0e-1]
+      learning_rate_non_params: [1.e-1, 6.e-2]
  
       # Number of training epochs of the parametric parts. It should be a strign where numeric values are separated by spaces."
-      n_epochs_params: [20, 20] 
+      n_epochs_params: [15, 15] 
   
       # Number of training epochs of the non-parametric parts. It should be a str where numeric values are separated by spaces."
-      n_epochs_non_params: [100, 120]
+      n_epochs_non_params: [100, 50]
   
